--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <!--Local scripts-->
   <script type="text/javascript" src="js/get_saved_tweets.js"></script><!--Local runkeeper_tweets file, which will load all of the tweets into the variable RUNKEEPER_TWEETS-->
   <script type="text/javascript" src="js/tweet.js"></script><!--Load local tweet.js file, which was generated from TypeScript-->
-  <script type="text/javascript" src="js/about.js"></script>
-
+  <script type="text/javascript" src="js/about.js"></script><!--Local about.js file to populate this page-->
   <!--Stylesheets-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css"><!--local stylesheet-->
